auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/sizeof_incomplete.c
struct s;

int main(void) {
  return sizeof(struct s); 
}